[project]
name = "ownhaystack"
version = "0.1.2"
description = "OpenHaystack + Owntracks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=43.0.3",
    "paho-mqtt>=2.1.0",
    "pbkdf2>=1.3",
    "pycryptodome>=3.21.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "srp>=1.0.21",
]

[tool.uv]
dev-dependencies = ["gitpython>=3.1.44", "ruff>=0.9.9", "semver>=3.0.4"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "D",      # pydocstyle
    "CPY",    # flake8-copyright
    "T20",    # flake8-print
    "TRY002", # Custom Exceptions
    "PGH003", # Use specific rule codes when ignoring type issues
]
